# solveclosure

./: .gitignore  CITATION.CFF  LICENSE  README.md  log.blockMesh  log.solver  log.splitMeshRegions  log.topoSet  pyproject.toml
demos/two_squares/: two_squares.tif  two_squares_demo.py
docs/: conf.py  guide.rst  index.rst  requirements.txt
docs/api/: modules.rst  solve2eqclosure.image_analysis.rst  solve2eqclosure.rst  solve2eqclosure.utility.rst  solveclosure.rst  solveclosure.utility.rst
examples/two_squares/: solve_closure_example.py  two_squares_example.py  two_squares_label_map.tif
src/solve-2eq-closure/: solve_closure_multiparticle.py
src/solve-2eq-closure/image_analysis/: __init__.py  calculate_area_and_volume.py  calculate_source_terms.py  check_and_write_area_and_volume_total.py  return_x_positions.py
src/solve-2eq-closure/openfoam_case_setup/: make_blockMeshDict.py  make_topoSetDict.py
src/solve-2eq-closure/utility/: __init__.py  add_slash.py  check_for_existing_solutions.py
src/solve2eqclosure/: __init__.py  generate_label_map.py  process_closure_results.py  solve_closure_multiparticle.py
src/solve2eqclosure/image_analysis/: __init__.py  calculate_area_and_volume.py  calculate_source_terms.py  check_and_write_area_and_volume_total.py  subdivide_image_using_label_map.py
src/solve2eqclosure/utility/: __init__.py  check_for_existing_solutions.py  (+1 more)
src/solveclosure/: generate_label_map.py  process_closure_results.py  solve_closure_multiparticle.py
tests/: test_two_squares.py  test_two_squares_dimensional.py  test_two_squares_dimensionless.py
(+36 files in other folders)
