[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solve-2eq-closure"
version = "0.1.0"
description = "A package that solves the closure problem for the 2-equation model published by Paten et al."
authors = [
  { name="Isaac Paten", email="isaacbpaten@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourname/hellopkg"

