[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "solveclosure"
version = "0.1.0"
description = "A package that solves the closure problem for the dual-continuum model published by Paten et al."
authors = [
  { name="Isaac Paten", email="isaacbpaten@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "tifffile",
    "numpy>=1.23",
    "matplotlib",
    "scikit-image",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/isaacbasil/solveclosure.git"

